Changelog
=========

4.3.3 (unreleased)
------------------

- Metadata accordion: SVGs to replace GIFs. Refs #16175
  [reinhardt]
- Review view: Only show commenting button if commenting is enabled.
  Refs #16221
  [reinhardt]


4.3.2 (2018-01-18)
------------------

- Replaced Twitter button with new social media buttons. Refs #16159
  [reinhardt]


4.3.1 (2017-11-16)
------------------

- Review view: Don't break if certain attributes are missing (as with
  presentations). Refs #15982
  [reinhardt]


4.3.0 (2017-09-21)
------------------

- Allow showing external link instead of directly using full text. Refs #15625
  [reinhardt]
- Added extra fields for ebooks. Refs #15676
  [reinhardt]
- Added field "PPN". Refs #15431
  [reinhardt]
- Insert portal title into "downloaded via" note in citation. Refs #15448
  [reinhardt]


4.2.1 (2017-06-12)
------------------

- Removed 'rel' attribute from citation. Fixes PDF generation. Refs #15189
  [reinhardt]


4.2.0 (2017-03-30)
------------------

- Show DOI in citation. Refs #13714
  [reinhardt]


4.1.1 (2017-01-27)
------------------

- Added toggle for using canonical_uri in BVID export, refs #14156
  [reinhardt]


4.1.0 (2017-01-27)
------------------

- TÃ¶chter, refs #13569, #13568
  [reinhardt]


4.0.1 (2016-05-23)
------------------

- Run tidy in utf8 mode. Also fixed tmp file suffixes. Refs #13490 [reinhardt]
- Force numeric entities, fixes swallowing of content by abiword, refs #13490
  [reinhardt]
- Don't auto-generate DOI for temporary objects. Refs #13627 [reinhardt]


4.0.0 (2016-04-25)
------------------

* Removed facebook like buttons, refs #13370
* Fixed getSite imports for Plone 4.3, refs #11785
* Tidy html before generating PDFs Refs #13104
* DOI registration support, refs #10976 #12126


3.1.3 (2015-09-01)
------------------

- render the new region_values_bsb in the oaisuggestions, refs #10622
  [reinhardt]


3.1.2 (2015-04-07)
------------------
